# medium-facebook

./: README.md  pyproject.toml
data/processed/: account_activity_counts.csv  comments.csv  friends.csv  googletrends_france.csv  googletrends_usa.csv  googletrends_world.csv  gps.json  off_activity_domains.csv  your_off_facebook_activity.txt
doc/wordcloud/: index.html
docs/wordcloud/: index.html
src/: comments_analysis.ipynb  constants.py  context_analysis.ipynb  friends.py  friends_analysis.ipynb  interests_analysis.ipynb  locations_analysis.ipynb  nlp_utils.py  utils.py
