[tool.poetry]
name = "facebook"
version = "0.1.0"
description = "Facebook medium article - source code"
authors = ["yleprince <yrieix.leprince@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
pandas = "^1.0.3"
matplotlib = "^3.2.1"
seaborn = "^0.10.0"
jupyterlab = "1.2"
ipywidgets="7.5"
folium = "^0.10.1"
requests = "^2.23.0"
bs4 = "^0.0.1"
spacy = "^2.2.4"
guessLanguage = "^0.2.1"
plotly = "^4.6.0"
sklearn = "^0.0"

[tool.poetry.dev-dependencies]
black = "^19.10b0"
flake8 = "^3.7.9"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"